# spamm-miniapp

./: .travis.yml  CMakeLists.txt  Doxyfile.in  README.markdown  README.md  _config.yml  index.html  index.markdown  index.md  params.json  test-1.inp  test-2.inp  test.inp
_includes/: openhub.html  openhub_badge.html  travis.html
_layouts/: default.html
spammpack/: CMakeLists.txt  spammpack.F90
src/: CMakeLists.txt  control_class.F90  lexer.l  logging.F90  mini-spamm.F90  parser.F90  parser.y  parser_wrapper.c  ptypes.h  strings.F90
travis/: before_install.sh
